--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-build/
+D:\Ramos U\OneDrive - miuandes.cl\6 semestre\Estructura de datos y algoritmos\Tarea 3\Tarea3_EDA\build
 comandos.txt
+CMakeLists.txt
